# shelltools

./: README.md  index.html  style.css
installers/: instala_comandos.zsh
mon-css/bak/: validate-deps.py
monitor-css/: mon1.py  mon2.py  mon3.py  monitor-css-old.py  pyproject.toml  validate_poetry.py
nginx-projects/: nginx-project-manager.sh
nginx-projects/easy-commands/: disable-nginx-php.zsh  enable-nginx-php.zsh  restart-nginx-php.zsh  stop-nginx-php.zsh
search/: search_files_with.py
waybar/: README.md  toggle-gammastep.sh
web-development/vscodium/: README.md  install-themes.sh  setup.sh  wrapper.zsh
web-development/vscodium/better-comments/: README.md  setup.sh  template-php.php  template-scss.scss  template-test.js
web-development/vscodium/liveserver/: README.md  index.html  setup.sh
web-development/vscodium/vscodium-shortcuts/: README.md  agrega_shortcuts_vscodium.zsh  apply-v1.zsh  apply.zsh  remove_blank_lines.zsh  shortcuts.json
