[project]
name = "monitor-css"
version = "0.1.0"
description = ""
authors = [
    {name = "datenmaniak",email = "ppwj@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "watchdog (>=6.0.0,<7.0.0)",
    "rich (>=14.2.0,<15.0.0)"
]

[tool.poetry]
packages = [{include = "monitor_css", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
